--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>💔Ayoub Personal site</title>
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="images/ayoub.jpg" alt="Ayoub profile picture" width="150" ></td>
+      <td> <img src="images/ayoub.jpg" alt="Ayoub profile picture" width="150"></td>
       <td>
         <h1>Ayoub Malik</h1>
 
